<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.nnm.team91.mine.Prefs1Fragment"
        android:title="@string/pref_setting_fontSize" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_lock" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_connect_id" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_alarm_set" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_notice" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_customer" />
    <header
        android:fragment="com.nnm.team91.mine.Prefs2Fragment"
        android:title="@string/pref_setting_app_info" />
</preference-headers>