<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--TODO: 액션바, 레이아웃 배치, 아이템 border 제거 -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/font_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="20dp"
        android:background="#ccc"
        android:elevation="4dp"
        android:text="@string/pref_fontsize_settings"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/font_content"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_below="@id/font_settings"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        android:text="@string/pref_fontsize_content" />

    <TextView
        android:id="@+id/font_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/font_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/pref_fontsize_explain" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/pref_fontsize_nomal"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_fontsize_big"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/pref_fontsize_biggest"
            android:textSize="16dp" />
    </LinearLayout>
</RelativeLayout>